# ai-coscientist-protein

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-protein.txt  requirements.txt
coscientist/: __init__.py  cli.py  engine.py
coscientist/agents/: __init__.py  base.py  evolution.py  generation.py  meta_review.py  proximity.py  ranking.py  reflection.py  supervisor.py
coscientist/config/: __init__.py  default.yaml  protein_binder.yaml
coscientist/core/: __init__.py  context.py  models.py  store.py  supervisor.py  tournament.py
coscientist/llm/: __init__.py  base.py  bedrock.py  factory.py  mock.py  prompts.py
coscientist/prompts/: evolution.system.j2  evolution.user.j2  generation.system.j2  generation.user.j2  meta_review.system.j2  meta_review.user.j2  ranking.system.j2  ranking.user.j2  reflection.system.j2  reflection.user.j2  supervisor.system.j2  supervisor.user.j2
coscientist/protein/: __init__.py  esm_scorer.py  factory.py  predictor.py  scorer.py
scripts/: aws_train.md  run_demo.sh
server/: __init__.py  app.py
server/static/: app.jsx  index.html  styles.css
tests/: __init__.py  test_e2e.py  test_llm_and_scorer.py  test_proximity.py  test_store.py  test_tournament.py
training/: README.md  __init__.py  data.py  eval.py  launch_multi_gpu.sh  model.py  plot_curves.py  train.py
