[project]
name = "coscientist"
version = "0.1.0"
description = "An AI Co-Scientist for protein binder design: a multi-agent system that generates, debates, ranks, and evolves protein sequences via an Elo tournament grounded in real ML scores."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Co-Scientist contributors" }]
keywords = ["multi-agent", "llm", "protein-design", "esm2", "bedrock", "scientific-discovery"]

dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Protein scoring + multi-GPU training. Heavy; only needed on the GPU box.
protein = [
    "torch>=2.2.0",
    "transformers>=4.42.0",
    "datasets>=2.20.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
coscientist = "coscientist.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coscientist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008", "UP042"]
